--- a/cssr4africa/pepper_interface_tests/config/actuatorTestInput.ini
+++ b/cssr4africa/pepper_interface_tests/config/actuatorTestInput.ini
@@ -1,7 +1,7 @@
-Head                false
-RArm                false
-LArm                false
-RHand               false
-LHand               false
+Head                true
+RArm                true
+LArm                true
+RHand               true
+LHand               true
 Leg                 true
-Wheels              false
+Wheels              true
