--- a/cssr4africa/pepper_interface_tests/config/sensorTestInput.ini
+++ b/cssr4africa/pepper_interface_tests/config/sensorTestInput.ini
@@ -1,7 +1,7 @@
-BackSonar           False
-FrontSonar          False
-BottomCamera        False
-FrontCamera         False
+BackSonar           True
+FrontSonar          True
+BottomCamera        True
+FrontCamera         True
 DepthCamera         True
-StereoCamera        False
-LaserSensor         False
+StereoCamera        True
+LaserSensor         True
