HIGH FPS for camera

--- a/cssr4africa/pepper_interface_tests/config/sensorTestInput.ini
+++ b/cssr4africa/pepper_interface_tests/config/sensorTestInput.ini
@@ -1,6 +1,6 @@
 BackSonar           False
 FrontSonar          False
-BottomCamera        False
+BottomCamera        True
 FrontCamera         False
 DepthCamera         False
 StereoCamera        False
