--- a/naoqi_driver/share/boot_config.json
+++ b/naoqi_driver/share/boot_config.json
@@ -6,19 +6,19 @@
     {
       "enabled"       : true,
       "resolution"    : 2,
-      "fps"           : 10,
+      "fps"           : 50,
       "recorder_fps"  : 5
     },
     "bottom_camera":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "resolution"    : 2,
       "fps"           : 10,
       "recorder_fps"  : 5
     },
     "depth_camera":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "xtion_resolution": 1,
       "stereo_resolution": 9,
       "fps"           : 10,
@@ -26,14 +26,14 @@
     },
     "stereo_camera":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "resolution"    : 15,
       "fps"           : 10,
       "recorder_fps"  : 5
     },
     "ir_camera":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "resolution"    : 1,
       "fps"           : 10,
       "recorder_fps"  : 5
@@ -50,34 +50,34 @@
     },
     "diag":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "frequency"     : 1
     },
     "imu_torso":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "frequency"     : 10
     },
     "imu_base":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "frequency"     : 10
     },
     "joint_states":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "frequency"     : 50
     },
     "laser":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "frequency"     : 10,
       "range_min"     : 0.1,
       "range_max"     : 3.0
     },
     "sonar":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "frequency"     : 10
     },
     "audio":
@@ -98,7 +98,7 @@
     },
     "odom":
     {
-      "enabled"       : true,
+      "enabled"       : false,
       "frequency"     : 15
     }
   }
